# SnapParse

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  windows-selection-monitoring-cn.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASE_AND_UPDATE.md  USER_GUIDE.zh-CN.md  manual-qa.md
docs/plans/: 2026-02-11-snapparse-v1-implementation-plan.md  2026-03-09-auto-detect-blank-area-guard-design.md  2026-03-09-clipboard-shell-fill-design.md  2026-03-09-selection-brand-animation-removal-design.md  2026-03-09-selection-detector-background-recovery-design.md  2026-03-09-selection-result-corner-artifact-design.md  2026-03-09-selection-ui-polish-design.md  2026-03-09-window-inner-radius-balance-design.md  2026-03-11-ocr-capture-z-order-reinforcement-design.md
lucide-common-100-pack/: README.md  icon-names.json  icon-names.rs  icon-names.ts
scripts/: generate-updater-manifest.mjs
src/: App.test.tsx  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: client.rs  prompts.rs
src-tauri/src/commands/: ai.rs  mod.rs  ocr.rs  settings.rs  windows.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/selection/: mod.rs  monitor.rs  state.rs
src-tauri/src/settings/: model.rs  store.rs
src-tauri/src/tests/: ai_payload_tests.rs  mod.rs  selection_judge_tests.rs  settings_store_tests.rs  window_manager_tests.rs
src-tauri/src/windows/: ids.rs  manager.rs  mod.rs
src/shared/: settings.test.ts  settings.ts
src/styles/: app.css  global.css
src/test/: setup.ts
src/windows/: router.test.ts  router.ts
src/windows/action-bar/: ActionBarWindow.test.tsx  ActionBarWindow.tsx  actionBar.css  actions.test.ts  actions.ts
src/windows/common/: ResultPanel.tsx  WindowHeader.tsx  actionIcon.tsx  useFeatureWindow.ts  (+2 more)
(+26 files in other folders)
