[package]
name = "snapparse-tauri"
version = "0.1.0"
description = "SnapParse desktop assistant"
authors = ["SnapParse"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(windows)'.dependencies]
get-selected-text = "0.1.6"
mouce = "0.3.0"
